Fix minor layout issue in playground

--- a/playground/playground.css
+++ b/playground/playground.css
@@ -30,7 +30,7 @@ textarea.compressed {
   overflow: hidden;
   width: 100%;
   padding-top: 10px;
-}  
+}
 
 .input-header .left {
   display: inline-block;
@@ -97,3 +97,5 @@ li.button:active span {
 }
 
 #frame {display: none;}
+
+#markup-container { clear: both }
